--- a/config/openwrt-main/config
+++ b/config/openwrt-main/config
@@ -1,7 +1,7 @@
-#
+CONFIG_PACKAGE_luci-theme-argon=y
 # Automatically generated file; DO NOT EDIT.
 # OpenWrt Configuration
-#
+CONFIG_PACKAGE_luci-app-ttnode=y
 CONFIG_MODULES=y
 CONFIG_HAVE_DOT_CONFIG=y
 CONFIG_HOST_OS_LINUX=y
