--- a/config/immortalwrt-master/config
+++ b/config/immortalwrt-master/config
@@ -9,7 +9,7 @@ CONFIG_HOST_OS_LINUX=y
 # CONFIG_TARGET_airoha is not set
 # CONFIG_TARGET_sunxi is not set
 # CONFIG_TARGET_apm821xx is not set
-CONFIG_TARGET_armsr=y
+#CONFIG_TARGET_armsr=y
 # CONFIG_TARGET_ath25 is not set
 # CONFIG_TARGET_ath79 is not set
 # CONFIG_TARGET_bcm27xx is not set
@@ -48,7 +48,7 @@ CONFIG_TARGET_bcm53xx=y
 # CONFIG_TARGET_zynq is not set
 # CONFIG_TARGET_x86 is not set
 # CONFIG_TARGET_armsr_armv7 is not set
-CONFIG_TARGET_armsr_armv8=y
+#CONFIG_TARGET_armsr_armv8=y
 # CONFIG_TARGET_MULTI_PROFILE is not set
 CONFIG_TARGET_armsr_armv8_DEVICE_generic=y
 CONFIG_HAS_SUBTARGETS=y
